# Scara_robot

./: README.md
Arduino/MPU/: MPU.ino
Arduino/Motor_controller/: Motor_controller.ino
Arduino/micro-ros_publisher_wifi/: micro-ros_publisher_wifi.ino
src/: CMakeLists.txt  ImuNode.h
src/imu/: CMakeLists.txt  package.xml
src/imu/src/: ImuMain.cpp  ImuNode.cpp
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/src/: kinematicsMain.cpp  kinematicsNode.cpp  kinematicsNode.h
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: my_publisher_node.py
src/ros2_tutorials_py/: package.xml  setup.cfg  setup.py
src/ros2_tutorials_py/ros2_tutorials_py/: temperature_sensor.py
src/ros_launch/: CMakeLists.txt  package.xml
src/ros_launch/launch/: start.launch
